2007-10-19 Andreas Schmitz <schmitz@lat-lon.de>
      src/language/jump_it.properties,
      src/language/jump_fi.properties,
      src/language/jump.properties,
      src/language/jump_zh_CN.properties,
      src/language/jump_en.properties,
      src/language/jump_pt.properties,
      src/language/jump_pt_BR.properties,
      src/language/jump_es.properties,
      src/language/jump_fr.properties,
      src/language/jump_de.properties,
      src/com/vividsolutions/wms/WMService.java,
      src/com/vividsolutions/jump/workbench/ui/plugin/wms/AddWMSQueryPlugIn.java:
	  Fixed issue
	  http://sourceforge.net/tracker/index.php?func=detail&aid=1748657&group_id=118054&atid=679906

2007-10-19 Paul Austin <paul.austin@revolsys.com
          * Removed Open, close buttons from the open project panel
          * Added double click handling to the new open wizards

2007-10-19 Andreas Schmitz <schmitz@lat-lon.de>
    src/de/latlon/deejump/plugin/style/DeeChangeStylesPlugIn.java,
    src/de/latlon/deejump/plugin/style/DeeRenderingStylePanel.java:
	Made a first attempt to fix the following bug:
	http://sourceforge.net/tracker/index.php?func=detail&aid=1566976&group_id=118054&atid=679906
	
2007-10-14 Paul Austin <paul.austin@revolsys.com
          * Improved the Open Wizard to work when there is no active project.
            If there are no projects at all a new one is created. If all
            projects are iconized the user will be able to select either a
            new project or use an existing one.
            
2007-10-18 Andreas Schmitz <schmitz@lat-lon.de>
    src/de/latlon/deejump/plugin/style/DeeChangeStylesPlugIn.java:
    Added initialization code.
    src/com/vividsolutions/jump/workbench/ui/renderer/ImageCachingFeatureCollectionRenderer.java:
    Fixed null pointer.

2007-10-18 Andreas Schmitz <schmitz@lat-lon.de>
    scripts/openjump.sh:
    Passing parameters to the script to OpenJUMP.

    src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl,